tests/test_exception/bad/missing_unlabeled_definition.catala_en
## Test

```catala
declaration scope A:
  context x content integer

scope A:
  exception
  definition x equals 1
```

```catala-test {id="A.Interpret"}
catala Interpret -s A
```
